<resources>
    <string name="app_name">GoOutTrafficSecretary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="now_loacation">현재위치</string>
    <string name="err_geocoder">지오코더 서비스 사용불가</string>
    <string name="err_not_found_address">주소 미발견</string>


    <!--info Message-->
    <string name="gps_not_allow_info">GPS가 비활성화 되어있습니다. 활성화 할까요?</string>


    <string name="setting">설정</string>
    <string name="cancel">취소</string>


    <!--side menu list-->
    <string name="show_map">지도보기</string>
    <string name="setting_path">출퇴경로설정</string>


    <!--login-->
    <string name="input_login">로그인</string>
    <string name="input_add">등록</string>
    <string name="input_id">ID 입력</string>
    <string name="input_pw">PW 입력</string>
    <string name="check_duplication">중복확인</string>
    <string name="username_error">아이디를 입력해 주세요.</string>
    <string name="password_error">패스워드를 입력해 주세요.</string>
    <string name="check_confirm_error">아이디 또는 비밀번호를 확인해 주세요.</string>
    <string name="succeed_login">로그인이 완료되었습니다.</string>
    <string name="succeed_add">정상 등록되었습니다.</string>

    <!--main-->
    <string name="saved_go_out_path">저장된 출퇴근 경로</string>
    <string name="title_activity_path_list">PathListActivity</string>


    <!--permission Info-->
    <string name="location_permission_info">앱에서 위치정보 권한을 요청합니다. 허용하시겠습니까?</string>
    <string name="location_permission_disagree_info">설정에서 권한을 허용하시면 맵을 확인하실 수 있습니다.</string>

    <string name="gps_permission_info">앱에서 GPS 권한을 요청합니다. 허용하시겠습니까?</string>
    <string name="gps_permission_disagree_info">설정에서 권한을 허용하시면 맵을 확인하실 수 있습니다.</string>


</resources>
